--- a/src/app/get-skills/get-skills.component.html
+++ b/src/app/get-skills/get-skills.component.html
@@ -10,7 +10,7 @@
           <mat-card-subtitle>{{skill.artist.firstName}} {{skill.artist.lastName}}</mat-card-subtitle>
         </div>
         <br/>
-        <img mat-card-image alt="profile picture" src='https://source.unsplash.com/random/600x400/?art, artworks/'>
+        <img mat-card-image alt="profile picture" src='https://source.unsplash.com/random/600x400/?art,painting/'>
         <br/>
         <br/>
         <mat-card-content>
