--- a/src/app/one-skill/one-skill.component.html
+++ b/src/app/one-skill/one-skill.component.html
@@ -6,7 +6,7 @@
                 <mat-card-title>{{oneSkill.artist.firstName}}</mat-card-title>
                 <mat-card-subtitle>{{oneSkill.title}}</mat-card-subtitle>
         </mat-card-header>
-        <img mat-card-image src="https://source.unsplash.com/random/1600x900/?art, artworks/" alt="Photo of Artist Work">
+        <img mat-card-image src="https://source.unsplash.com/random/1600x900/?art,painting/" alt="Photo of Artist Work">
         <mat-card-content>
             <h2>{{oneSkill.skillType}}</h2>
           </mat-card-content>
