switched login to register page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,6 +16,6 @@
 </div>
 
     <div class='button'>
-        <button mat-button class='getStarted' routerLink='/login'>Join now!</button>
+        <button mat-button class='getStarted' routerLink='/signup'>Join now!</button>
     </div>
 </div>
