--- a/src/app/one-skill/one-skill.component.html
+++ b/src/app/one-skill/one-skill.component.html
@@ -23,7 +23,7 @@
           <hr />
           <div class= "book">
           Email {{oneSkill.artist.firstName}} {{oneSkill.artist.LastName}} at 
-          <b>{{oneSkill.artist.email }}</b> to book his service now!
+          <b>{{oneSkill.artist.email }}</b> to book their service now!
         </div>
             <!-- <form action="https://formspree.io/mzbdbabp" method="POST">
               <input type="hidden" name="_subject" value="Devon" />
