--- a/src/app/myprofile/myprofile.component.html
+++ b/src/app/myprofile/myprofile.component.html
@@ -7,14 +7,14 @@
             <div class="bannerText" *ngFor='let oneArtistSkill of oneArtistSkills'>
             <mat-card>
                 <button mat-button class='getSkill' routerLink ='/skill/{{oneArtistSkill.id}}'> Profile #: {{oneArtistSkill.id}}</button>
-                <h5> Artist Name: {{oneArtistSkill.artist.firstName}} {{oneArtistSkill.artist.lastName}}</h5>
+                <h5> Name: {{oneArtistSkill.artist.firstName}} {{oneArtistSkill.artist.lastName}}</h5>
                 <h5> 
-                        Artist E-mail:
+                        Email:
                         {{oneArtistSkill.artist.email}} </h5>
                 <h5> 
-                    Category of Artist:
+                    Artist Category:
                     {{oneArtistSkill.skillType}} </h5>
-                <h5><i><u> Headline Title: {{oneArtistSkill.title}}</u></i></h5>
+                <h5>  Title: {{oneArtistSkill.title}}</h5>
                 <h5> Description: {{oneArtistSkill.description}}</h5>
                 <h5>Price : ${{oneArtistSkill.price}}</h5>
                 <button mat-stroked-button color="primary" [routerLink] = "['/edit', oneArtistSkill.id]">Update</button>
